<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".PowerActivity"
              android:orientation="vertical" >

<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

    <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image"
            android:src="@drawable/powereq" />

<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/solve_for_"
                android:textSize="15sp" />

        <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:entries="@array/PowerActivitySolveFor" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P_"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/editText2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:filterTouchesWhenObscured="true"
                android:inputType="number|numberDecimal" />

        <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/energyUnits" />

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/slash"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp" />

        <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/timeUnits" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/W_"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/editText6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:filterTouchesWhenObscured="true"
                android:inputType="number|numberDecimal" />

        <Spinner
                android:id="@+id/spinner7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/energyUnits" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/editText8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:filterTouchesWhenObscured="true"
                android:inputType="number|numberDecimal" />

        <Spinner
                android:id="@+id/spinner9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/timeUnits" />

    </LinearLayout>
</LinearLayout>
</ScrollView>